# UltimateTicTacToeAI

./: CMakeLists.txt  README.md  State.cpp  State.h  UltimateTicTacToeAi.csproj  UltimateTicTacToeAi.sln  brain.txt  icon.svg.import  main  main.cpp  main.tscn  project.godot  study.h  todo.txt
Tests/: gtest.cpp
code/: main.cpp
code/headers/: Agent.h  Game.h  Graphics.h  State.h
code/source/: Agent.cpp  State.cpp
code/tests/: AgentTrainerTests.cpp  MoveTests.cpp  Ultimate3TStateTests.cpp  evaluationValueTests.cpp  evaluationValueTests.h
documentation/: UltimateTicTacToeRules.md
source/: GameState.cs  Solver.cs  UltimateTicTacToeState.cs
tests/: GameStateTests.cs  SolverTests.cs  UltimateTicTacToeStateTests.cs  metricTests.cs
